--- a/README
+++ b/README
@@ -1,12 +1,8 @@
 **About**
-Currently, this bot crawls /r/warthunder for news submissions from warthunder.com. Eventually, I hope to have it simply find news posts and post them itself as well.
 
-When it finds a news post, it fetches the article and scrapes it for text, links, images, and embedded content. This is then "translated" to the format of a Reddit comment and posted in the comments section.
+This bot crawls warthunder.com/news for news items and posts them to reddit.com/r/warthunder.
+
+When it submits a news item or finds an existing submission, it fetches the article and scrapes it for text, links, images, and embedded content. This is then "translated" to the format of a Reddit comment and posted in the comments section.
 
 This probably isn't that useful in other contexts, but it can be configured to run on different user accounts and subreddits simply by changing the username and subreddit variables.
 
-**TODO:**
-Get the bot to posts news posts on its own.
-Deal with long submissions that result in failed comments (break into multiple comments)
-Possibly make worldtimebuddy link include more useful timezones or even link to the time stated in the news post. (Regex is hard.)
-Possibly mirror forum posts as well? (Probably not until a much later revision)
